--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -34,6 +34,8 @@
 </head>
 
 <body>
+
+<a href="/auth/Google">Login via Google</a>
 
 <div class="container" ng-app="quizApp" ng-controller="QuizCtrl" class="ng-scope" ng-cloak>
 	<div class="row clearfix">
